bind10-devel-20100602 released on June 2, 2010

  51.   [build]         jelte
	lib/python: Add bind10_config.py module for paths and
	possibly other configure-time variables. Allow some components
	to find spec files in build tree when ran from source.
	(Trac #223)

  50.	[bug]		zhanglikun
	bin/xfrin: a regression in xfrin: it can't communicate with 
	a remote server. (Trac #218, svn r2038)

  49.	[func]*		jelte
	Use unix domain sockets for msgq. (Trac #183, svn r2009)

  48.	[func]		jelte
	bin/auth: Use asio's io_service for the msgq handling.
	(svn r2007)

  47.	[func]		zhanglikun
	bin/cmdctl: Add value/type check for commands sent to
	cmdctl. (Trac #201, svn r1959)

  46.	[func]		zhanglikun
	lib/cc: Fix real type data encoding/decoding. (Trac #193,
	svn r1959)

  45.	[func]		zhanglikun
	bin/bind10: Pass verbose option to more modules. (Trac
	#205, svn r1957)

  44.   [build]         jreed
	Install headers for libdns and libexception.  (Trac #68,
	svn r1941)

  43.   [func]          jelte
	lib/cc: Message queuing on cc channel. (Trac #58, svn r1870)

  42.   [func]          jelte
	lib/python/isc/config:      Make temporary file with python
	tempfile module instead of manual with fixed name.  (Trac
	#184, svn r1859)

  41.   [func]          jelte
	Module descriptions in spec files. (Trac #90, svn r1856)

  40.   [build]         jreed
	Report detected features and configure settings at end of
	configure output.  (svn r1836)

  39.   [func]*         each
	Renamed libauth to libdatasrc.

  38.   [bug]           zhanglikun
	(Trac #135, #151, #134, svn r1797)

  37.   [build]         jinmei
	Check for the availability of python-config.  (Trac #159,
	svn r1794)

  36.	[func]		shane
	bin/bind10:	Miscellaneous code cleanups and improvements.
	(Trac #40, svn r2012)

  35.	[bug]		jinmei
	bin/bindctl: fixed a bug that it didn't accept IPv6 addresses as
	command arguments. (Trac #219, svn r2022)

  34.	[bug]		jinmei